--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,9 +6,8 @@ on:
       - main
 
 env:
-  REGISTRY: ghcr.io  # or docker.io
-  IMAGE_BACKEND: ghcr.io/YOUR_USERNAME/easysplit-backend
-  IMAGE_FRONTEND: ghcr.io/YOUR_USERNAME/easysplit-frontend
+  IMAGE_BACKEND: docker.io/YOUR_DOCKERHUB_USERNAME/easysplit-backend
+  IMAGE_FRONTEND: docker.io/YOUR_DOCKERHUB_USERNAME/easysplit-frontend
 
 jobs:
   build-and-push:
@@ -21,12 +20,11 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Login to container registry
+      - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ secrets.REGISTRY_USERNAME }}
-          password: ${{ secrets.REGISTRY_PASSWORD }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and push backend image
         run: |
@@ -37,4 +35,8 @@ jobs:
         run: |
           docker build -t $IMAGE_FRONTEND:latest ./frontend
           docker push $IMAGE_FRONTEND:latest
+
+      - name: Update backend deployment YAML with latest image
+        run: |
+          sed -i "s|image:.*|image: $IMAGE_BACKEND:latest|g" ./k8s/backend-deployment.yaml
 
