--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,6 @@
 FROM eclipse-temurin:21-jdk-alpine
 VOLUME /tmp
-ARG JAR_FILE=target/*.jar
-COPY ${JAR_FILE} app.jar
+COPY target/*.jar app.jar
 EXPOSE 8080
 ENTRYPOINT ["java","-jar","/app.jar"]
 
