--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,6 +20,17 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
+      - name: Set up Java
+        uses: actions/setup-java@v3
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+
+      - name: Build backend JAR
+        run: |
+          cd backend
+          ./mvnw clean package -DskipTests
+
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
