--- a/kubernetes/kustomization.yaml
+++ b/kubernetes/kustomization.yaml
@@ -1,7 +1,16 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - backend/
-  - frontend/
-  - db/
-  - sealed-secrets/
+  - ingress.yaml
+  - namespace.yaml
+  - backend/deployment.yaml
+  - backend/service.yaml
+  - frontend/deployment.yaml
+  - frontend/service.yaml
+  - db/service.yaml
+  - db/statefulset.yaml
+  - sealed-secrets/secrets.yaml
+  - sealed-secrets/db-credentials.yaml
+
+namespace: easysplit
+
