--- a/kubernetes/argocd/app.yaml
+++ b/kubernetes/argocd/app.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/YOUR_USERNAME/YOUR_REPO
+    repoURL: https://github.com/M0hammed-Ali/easysplit-cicd.git
     targetRevision: HEAD
     path: k8s-manifests
   destination:
