--- a/kubernetes/argocd/app.yaml
+++ b/kubernetes/argocd/app.yaml
@@ -8,7 +8,7 @@ spec:
   source:
     repoURL: https://github.com/M0hammed-Ali/easysplit-cicd.git
     targetRevision: HEAD
-    path: k8s-manifests
+    path: kubernetes
   destination:
     server: https://kubernetes.default.svc
     namespace: easysplit
