--- a/kubernetes/sealed-secrets/db-credentials.yaml
+++ b/kubernetes/sealed-secrets/db-credentials.yaml
@@ -3,7 +3,7 @@ apiVersion: bitnami.com/v1alpha1
 kind: SealedSecret
 metadata:
   creationTimestamp: null
-  name: db-secret
+  name: db-credentials
   namespace: easysplit
 spec:
   encryptedData:
