--- a/kubernetes/backend/deployment.yaml
+++ b/kubernetes/backend/deployment.yaml
@@ -20,6 +20,11 @@ spec:
           ports:
             - containerPort: 8080
           env:
+            - name: POSTGRES_DB
+              valueFrom:
+                secretKeyRef:
+                  name: db-secret
+                  key: POSTGRES_DB
             - name: SPRING_DATASOURCE_URL
               value: jdbc:postgresql://db:5432/$(POSTGRES_DB)
             - name: SPRING_DATASOURCE_USERNAME
