--- a/kubernetes/db/statefulset.yaml
+++ b/kubernetes/db/statefulset.yaml
@@ -22,17 +22,17 @@ spec:
             - name: POSTGRES_DB
               valueFrom:
                 secretKeyRef:
-                  name: db-credentials
+                  name: db-secret
                   key: POSTGRES_DB
             - name: POSTGRES_USER
               valueFrom:
                 secretKeyRef:
-                  name: db-credentials
+                  name: db-secret
                   key: POSTGRES_USER
             - name: POSTGRES_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: db-credentials
+                  name: db-secret
                   key: POSTGRES_PASSWORD
           volumeMounts:
             - name: db-data
