--- a/kubernetes/backend/deployment.yaml
+++ b/kubernetes/backend/deployment.yaml
@@ -20,13 +20,11 @@ spec:
           ports:
             - containerPort: 8080
           env:
-            - name: POSTGRES_DB
+            - name: SPRING_DATASOURCE_URL
               valueFrom:
                 secretKeyRef:
                   name: db-secret
-                  key: POSTGRES_DB
-            - name: SPRING_DATASOURCE_URL
-              value: jdbc:postgresql://db:5432/$(POSTGRES_DB)
+                  key: SPRING_DATASOURCE_URL
             - name: SPRING_DATASOURCE_USERNAME
               valueFrom:
                 secretKeyRef:
