--- a/kubernetes/sealed-secrets/secrets.yaml
+++ b/kubernetes/sealed-secrets/secrets.yaml
@@ -7,8 +7,8 @@ metadata:
     sealedsecrets.bitnami.com/managed: "true"
 type: Opaque
 stringData:
-  POSTGRES_USER: cG9zdGdyZXM=
-  POSTGRES_PASSWORD: MTIzNA==
-  POSTGRES_DB: ZWFzeXNwbGl0
+  POSTGRES_USER: postgres
+  POSTGRES_PASSWORD: 1234
+  POSTGRES_DB: easysplit
 #kubeseal --format=yaml < db-secret.yaml > db-sealedsecret.yaml
 
